Generify and modernize to remove code warnings