@@ -10,12 +10,12 @@ import java.util.*;
 public class DefaultNamespaceContext implements NamespaceContext {
 
     /* URI -> prefixes map */
-    private Map<String, Collection<String>> namespace;
+    private final Map<String, Collection<String>> namespace;
 
     /* prefix -> URI map */
-    private Map<String, String> prefixes;
+    private final Map<String, String> prefixes;
 
-    private String defaultNamespaceURI;
+    private final String defaultNamespaceURI;
 
 
     /**
@@ -35,30 +35,22 @@ public class DefaultNamespaceContext implements NamespaceContext {
      * @param defaultNamespaceURI , the default namespace for this context.
      */
     public DefaultNamespaceContext(String defaultNamespaceURI) {
-        namespace = new HashMap<String, Collection<String>>();
-        prefixes = new HashMap<String, String>();
+        namespace = new HashMap<>();
+        prefixes = new HashMap<>();
         this.defaultNamespaceURI = defaultNamespaceURI;
 
-        namespace.put(XMLConstants.XMLNS_ATTRIBUTE_NS_URI,
-                      Arrays.asList(XMLConstants.XMLNS_ATTRIBUTE));
+        namespace.put(XMLConstants.XMLNS_ATTRIBUTE_NS_URI, List.of(XMLConstants.XMLNS_ATTRIBUTE));
+        prefixes.put(XMLConstants.XMLNS_ATTRIBUTE, XMLConstants.XMLNS_ATTRIBUTE_NS_URI);
 
-        prefixes.put(XMLConstants.XMLNS_ATTRIBUTE,
-                     XMLConstants.XMLNS_ATTRIBUTE_NS_URI);
-
-        namespace.put(XMLConstants.XML_NS_URI,
-                      Arrays.asList(XMLConstants.XML_NS_PREFIX));
-
-        prefixes.put(XMLConstants.XML_NS_PREFIX,
-                     XMLConstants.XML_NS_URI);
+        namespace.put(XMLConstants.XML_NS_URI, List.of(XMLConstants.XML_NS_PREFIX));
+        prefixes.put(XMLConstants.XML_NS_PREFIX, XMLConstants.XML_NS_URI);
     }
 
-    public DefaultNamespaceContext(String defaultNamespaceURI,
-                                   String... nsContext) {
+    public DefaultNamespaceContext(String defaultNamespaceURI, String... nsContext) {
         this(defaultNamespaceURI);
 
         if (nsContext.length % 2 != 0) {
-            throw new IllegalArgumentException("Odd number of arguments. " +
-                                               "Prefix/URI pairs must match up");
+            throw new IllegalArgumentException("Odd number of arguments. Prefix/URI pairs must match up");
         }
 
         for (int i = 0; i < nsContext.length; i += 2) {
@@ -80,12 +72,11 @@ public class DefaultNamespaceContext implements NamespaceContext {
      * @throws IllegalArgumentException thrown when trying to assign a
      *                                  namespace to a reserved prefix
      */
-    public void setNameSpace(String namespaceURL, String prefix)
-            throws IllegalArgumentException {
+    public void setNameSpace(String namespaceURL, String prefix) throws IllegalArgumentException {
         Collection<String> s = namespace.get(namespaceURL);
 
         if (s == null) {
-            s = new HashSet<String>();
+            s = new HashSet<>();
         }
 
         s.add(prefix);
@@ -104,13 +95,11 @@ public class DefaultNamespaceContext implements NamespaceContext {
             return this.defaultNamespaceURI;
         }
 
-
         if (!this.prefixes.containsKey(prefix)) {
             return XMLConstants.NULL_NS_URI;
         }
 
         return this.prefixes.get(prefix);
-
     }
 
     @Override
@@ -132,30 +121,27 @@ public class DefaultNamespaceContext implements NamespaceContext {
     }
 
     @Override
-    public Iterator getPrefixes(String namespaceURI) {
+    public Iterator<String> getPrefixes(String namespaceURI) {
 
         if (namespaceURI == null) {
             throw new IllegalArgumentException();
         }
 
         if (namespaceURI.equals(XMLConstants.XML_NS_URI)) {
-            return new NonModifiableIterator(
-                    Arrays.asList(XMLConstants.XML_NS_PREFIX).iterator());
+            return new NonModifiableIterator<>(List.of(XMLConstants.XML_NS_PREFIX).iterator());
         }
         if (namespaceURI.equals(XMLConstants.XMLNS_ATTRIBUTE_NS_URI)) {
-            return new NonModifiableIterator(
-                    Arrays.asList(XMLConstants.XMLNS_ATTRIBUTE).iterator());
+            return new NonModifiableIterator<>(List.of(XMLConstants.XMLNS_ATTRIBUTE).iterator());
         }
         if (namespaceURI.equals(defaultNamespaceURI)) {
-            return new NonModifiableIterator(
-                    Arrays.asList(XMLConstants.DEFAULT_NS_PREFIX).iterator());
+            return new NonModifiableIterator<>(List.of(XMLConstants.DEFAULT_NS_PREFIX).iterator());
         }
 
         Collection<String> s = namespace.get(namespaceURI);
         if (s != null && !namespace.isEmpty()) {
-            return new NonModifiableIterator(s.iterator());
+            return new NonModifiableIterator<>(s.iterator());
         } else {
-            return new NonModifiableIterator(new HashSet().iterator());
+            return new NonModifiableIterator<>(Collections.emptyIterator());
         }
     }
 
@@ -167,11 +153,11 @@ public class DefaultNamespaceContext implements NamespaceContext {
      * @version $Id: DefaultNamespaceContext.java,v 1.5 2007/10/04 13:28:21 te Exp $
      * @see javax.xml.namespace.NamespaceContext#getPrefixes(String)
      */
-    static class NonModifiableIterator implements Iterator {
+    static class NonModifiableIterator<T> implements Iterator<T> {
 
-        Iterator wrapped;
+        Iterator<T> wrapped;
 
-        NonModifiableIterator(Iterator iter) {
+        NonModifiableIterator(Iterator<T> iter) {
             wrapped = iter;
         }
 
@@ -182,6 +168,7 @@ public class DefaultNamespaceContext implements NamespaceContext {
          *
          * @return <tt>true</tt> if the iterator has more elements.
          */
+        @Override
         public boolean hasNext() {
             return wrapped.hasNext();
         }
@@ -195,7 +182,8 @@ public class DefaultNamespaceContext implements NamespaceContext {
          * @throws java.util.NoSuchElementException
          *          iteration has no more elements.
          */
-        public Object next() {
+        @Override
+        public T next() {
             return wrapped.next();
         }
 
@@ -207,6 +195,7 @@ public class DefaultNamespaceContext implements NamespaceContext {
          * @throws UnsupportedOperationException if the <tt>remove</tt>
          *                                       operation is not supported by this Iterator.
          */
+        @Override
         public void remove() {
             throw new UnsupportedOperationException("Conform to XML API please");
         }
